# immichsync

./: ARCHITECTURE.md  CLAUDE.md  COPYRIGHT  Cargo.toml  LICENSE  PLAN.md  README.md  SBOM.md  STRUCTURE.md
.cargo/: config.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug.yml  enhancement.yml  feature.yml  improvement.yml  refactor.yml
.github/workflows/: ci.yml  generate-artifacts.yml  pr-review.yml  release.yml  security-scan.yml
src/: app.rs  config.rs  db.rs  main.rs  updater.rs
src/api/: albums.rs  assets.rs  auth.rs  mod.rs  server.rs
src/platform/: autostart.rs  drives.rs  encryption.rs  install.rs  known_folders.rs  mod.rs  shortcuts.rs  shutdown.rs  single_instance.rs
src/ui/: about.rs  first_run.rs  install.rs  mod.rs  notifications.rs  settings.rs  trash_log.rs  tray.rs  update.rs  upload_log.rs
src/upload/: hasher.rs  metadata.rs  mod.rs  queue.rs  worker.rs
src/watch/: device.rs  filter.rs  folder.rs  mod.rs  network.rs
